--- a/style.css
+++ b/style.css
@@ -264,7 +264,7 @@
 }
 
 .bod {
-    background-image: url(../website//image/Estrelas\ \(Stars\)\ 🌌.jpg);
+    background-image: url(image/Estrelas\ \(Stars\)\ 🌌.jpg);
     background-size: contain;
     height: 700px;
 }
