--- a/style.css
+++ b/style.css
@@ -487,7 +487,7 @@ h3 {
 }
 
 .back2 {
-    background-image: url(../website/image/img.jpg);
+    background-image: url(image/img.jpg);
     background-size: contain;
     height: 100px;
 }
